updating notebook with latest changes

--- a/Netflix_Movies_And_TV_Shows_Clustering_(Unsupervised_Learning).ipynb
+++ b/Netflix_Movies_And_TV_Shows_Clustering_(Unsupervised_Learning).ipynb
@@ -31,9 +31,7 @@
         "\n",
         "### This dataset consists of tv shows and movies available on Netflix as of 2019. The dataset is collected from Flixable which is a third-party Netflix search.\n",
         "\n",
-        "### In 2018, they released an interesting report which shows that the number of TV shows on Netflix has nearly tripled since 2010. The streaming service’s number of movies has decreased by more than 2,000 titles since 2010, while its number of TV shows has nearly tripled. It will be interesting to explore what all other insights can be obtained from the same dataset.\n",
-        "\n",
-        "### Integrating this dataset with other external datasets such as IMDB ratings, rotten tomatoes can also provide many interesting findings."
+        "### In 2018, they released an interesting report which shows that the number of TV shows on Netflix has nearly tripled since 2010. The streaming service’s number of movies has decreased by more than 2,000 titles since 2010, while its number of TV shows has nearly tripled. It will be interesting to explore what all other insights can be obtained from the same dataset."
       ]
     },
     {
@@ -50,12 +48,6 @@
         "### <b><u>Data fields</u></b>\n",
         "### Most of the fields are self-explanatory. The following are descriptions for those that aren't.\n",
         "\n",
-        "* #### Username - coded Username\n",
-        "* #### ScreenName - coded ScreenName\n",
-        "* #### Location - Region of origin\n",
-        "* #### TweetAt - Tweet Timing\n",
-        "* #### OriginalTweet - First tweet in the thread\n",
-        "* #### Sentiment-Target variable - Sentiment of the tweet\n",
         "* #### Show_id : Unique ID for every Movie / Tv Show\n",
         "* #### Type : Identifier - A Movie or TV Show\n",
         "* #### Title : Title of the Movie / Tv Show\n",
@@ -3495,7 +3487,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOA4Np8bIkeGPC7avrDLIFq",
+      "authorship_tag": "ABX9TyO6eax5S7XBaefS7xJuD8pE",
       "include_colab_link": true
     },
     "gpuClass": "standard",
