Final update commit

--- a/Netflix_Movies_And_TV_Shows_Clustering_(Unsupervised_Learning).ipynb
+++ b/Netflix_Movies_And_TV_Shows_Clustering_(Unsupervised_Learning).ipynb
@@ -118,13 +118,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "LD5AIXDR7xLf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "df4e15b4-913f-42bc-9e1a-defb8a83c43d"
+        "outputId": "77cac925-4056-4145-bc7d-e3b4512e5061"
       },
       "outputs": [
         {
@@ -172,13 +172,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "imqryo2e6t42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f73a432a-30f9-433b-884f-b45709eeb83d"
+        "outputId": "995f3129-ba11-411b-92b9-7fc9aeb41711"
       },
       "outputs": [
         {
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "EpThrZLR8QAh",
         "colab": {
@@ -461,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "43Qsgq_K8Qmx",
         "colab": {
@@ -488,7 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "i5AazUKg82eI",
         "colab": {
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "HVo0UWvN85wo",
         "colab": {
@@ -568,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "01uGnHbeAxCo",
         "colab": {
@@ -607,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "192S8PUe9C2g",
         "colab": {
@@ -656,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "eqKgSS0CA7yY"
       },
@@ -680,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "S4W08oVoECYg"
       },
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "3nUmfj6XEAJo",
         "colab": {
@@ -759,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "3wofX0_QF1Hn",
         "colab": {
@@ -817,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "UW9Sl2dtRyiX",
         "colab": {
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "xb69QDiuPybL",
         "colab": {
@@ -936,7 +936,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "W5ut3wZZ076Y",
         "colab": {
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "fxeUIiXR2QlF",
         "colab": {
@@ -1063,7 +1063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "InZxiSOyXVBM",
         "colab": {
@@ -1115,7 +1115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "8BnCrGcDZ6P5",
         "colab": {
@@ -1175,7 +1175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "JAeyo5eYdSba",
         "colab": {
@@ -1235,7 +1235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "VT5y__zpfrrj",
         "colab": {
@@ -1287,7 +1287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "VIKnX8Nfm-q5"
       },
@@ -1299,7 +1299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "fbEPjykMlVUQ"
       },
@@ -1322,7 +1322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "uwFUDrslqCMB"
       },
@@ -1338,7 +1338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "5A1G0629trU5",
         "colab": {
@@ -1389,7 +1389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "VnfGpWo-4n2o",
         "colab": {
@@ -1433,7 +1433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "ynsuACwx4UXz",
         "colab": {
@@ -1684,7 +1684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "moiR15zA4o8_",
         "colab": {
@@ -1748,7 +1748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "CqbihSixFYXl",
         "colab": {
@@ -1802,7 +1802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "VBvflJsNJ2uy"
       },
@@ -1814,7 +1814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "gpL10oMdKexR"
       },
@@ -1827,7 +1827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "A_j_tJzOWwcN",
         "colab": {
@@ -2116,7 +2116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "H36CVhwaWYxJ",
         "colab": {
@@ -2155,7 +2155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "GAPws-2saaCs",
         "colab": {
@@ -2184,7 +2184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "Im3qn5U1ZPN3"
       },
@@ -2200,7 +2200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "HZRO4vE9Yhkv"
       },
@@ -2212,7 +2212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "H7IVC46uZruU",
         "colab": {
@@ -2251,7 +2251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "XgRhvaHCbQEw"
       },
@@ -2263,7 +2263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "PNkJBhStZs6e"
       },
@@ -2278,7 +2278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "2CxWGc9PbeT0"
       },
@@ -2290,7 +2290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "Y9js1W2kblLc",
         "colab": {
@@ -2329,7 +2329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "ddXSkrbWcBG8"
       },
@@ -2342,7 +2342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "2-uTFLl8c74L"
       },
@@ -2354,7 +2354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "WKcdCvwhc-sT",
         "colab": {
@@ -2395,7 +2395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "BJP-p8D4nEiE"
       },
@@ -2413,7 +2413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "f3PT9qXnrTby"
       },
@@ -2425,7 +2425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "S2D74INRewzL",
         "colab": {
@@ -2464,7 +2464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "qSmK7k5u92q9"
       },
@@ -2478,7 +2478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "S7nAKaW2ff6d",
         "colab": {
@@ -2504,7 +2504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "g0YFfnY3gsO8",
         "colab": {
@@ -2556,7 +2556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "fGoCBw9QexJW",
         "colab": {
@@ -2584,7 +2584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "Eqt_9VR-kJkT",
         "colab": {
@@ -2628,7 +2628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "c6Zt7yHwnaCT"
       },
@@ -2648,7 +2648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "iDkHnhhdnezX",
         "colab": {
@@ -2704,7 +2704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "QnuFCarFvlZ6"
       },
@@ -2716,7 +2716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 3,
       "metadata": {
         "id": "kC9azo4daGH9"
       },
@@ -2728,13 +2728,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 4,
       "metadata": {
         "id": "fg8a_rIqa2Rf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6daad194-ac49-40c7-b51c-9418cefce62d"
+        "outputId": "8ee3a8a7-f85b-47a2-b884-555787d5f318"
       },
       "outputs": [
         {
@@ -2745,7 +2745,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 4
         }
       ],
       "source": [
@@ -2776,7 +2776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "L1kso7bYqeGt",
         "colab": {
@@ -2835,7 +2835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "DHuL_hlqqd2q",
         "colab": {
@@ -2913,7 +2913,7 @@
         "id": "AkmO2O77smjM",
         "outputId": "0104af8f-0a66-41b1-bf28-bd4d61345970"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2951,7 +2951,7 @@
       "metadata": {
         "id": "7g9sYOSJs0A8"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2963,7 +2963,7 @@
       "metadata": {
         "id": "BYxOxTzLsTBy"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2975,12 +2975,13 @@
       "metadata": {
         "id": "DcOcokfgm1Ks"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#Creating a checkpoint\n",
         "df = pd.read_csv('/content/drive/MyDrive/Netflix Movies And TV Shows Clustering/cluster_df.csv', index_col=[0])\n",
         "df.head()"
       ],
@@ -2990,9 +2991,9 @@
           "height": 666
         },
         "id": "Y802dVU614kJ",
-        "outputId": "ce61f293-1545-492a-dc08-eab192fc5029"
+        "outputId": "7b9355eb-aa00-49e1-9064-1f4d21bb84f5"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3042,7 +3043,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fa135109-15d0-441a-b59a-ebeeb0a230c0\">\n",
+              "  <div id=\"df-ce7b3ed0-5672-4882-a463-fce0b5767f6d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -3191,7 +3192,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa135109-15d0-441a-b59a-ebeeb0a230c0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce7b3ed0-5672-4882-a463-fce0b5767f6d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3242,12 +3243,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fa135109-15d0-441a-b59a-ebeeb0a230c0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ce7b3ed0-5672-4882-a463-fce0b5767f6d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fa135109-15d0-441a-b59a-ebeeb0a230c0');\n",
+              "          const element = document.querySelector('#df-ce7b3ed0-5672-4882-a463-fce0b5767f6d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3270,7 +3271,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 5
         }
       ]
     },
@@ -3298,7 +3299,7 @@
         "id": "fdFz0PvtpqeW",
         "outputId": "f8da144d-c245-43f3-9523-4593a8d81391"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3355,7 +3356,7 @@
       "metadata": {
         "id": "Jh4OF6mJ2xUh"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3376,7 +3377,7 @@
       "metadata": {
         "id": "j0VwuhhDrqjo"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3392,7 +3393,7 @@
         "id": "8xKf_vkcrzRO",
         "outputId": "7803a5ae-baba-41a1-ff3c-3d837a7ab43e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3425,7 +3426,7 @@
         "id": "ekh-AO4HtVI2",
         "outputId": "bf0649d0-121e-481f-e17e-3e887b18be91"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3487,7 +3488,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6eax5S7XBaefS7xJuD8pE",
+      "authorship_tag": "ABX9TyOq0WrZJNix+h4ujUzg+8vL",
       "include_colab_link": true
     },
     "gpuClass": "standard",
